<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/name_tableLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp">

        <EditText
            android:id="@+id/editText_firstName"
            style="@style/editText.editText_name"
            android:inputType="textCapWords|textPersonName"
            android:hint="@string/firstName"/>

        <ImageView
            android:id="@+id/collapse_name"
            android:layout_gravity="right|top"
            android:layout_marginLeft="5dp"
            android:src="@drawable/ic_collapse_name"
            android:onClick="onClick"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp">

    <EditText
        android:id="@+id/editText_middleName"
        style="@style/editText.editText_name"
        android:inputType="textCapWords|textPersonName"
        android:hint="@string/middleName"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp">

    <EditText
        android:id="@+id/editText_lastName"
        style="@style/editText.editText_name"
        android:inputType="textCapWords|textPersonName"
        android:hint="@string/lastName"/>
    </TableRow>

    <TableRow>
        <View style="@style/horizontal_table_divider"/>
    </TableRow>
</TableLayout>