<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar xmlns:local="http://schemas.android.com/apk/res-auto"
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"

        local:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        local:theme="@style/AppTheme">
    </android.support.v7.widget.Toolbar>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/name_linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false">

                <TableLayout
                    android:id="@+id/name_tableLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="10dp">

                        <TextView
                            android:id="@+id/textView_firstName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/firstName"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:layout_gravity="right|center_vertical"/>

                        <EditText
                            android:id="@+id/editText_firstName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="none"
                            android:layout_weight="1"/>
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="10dp">

                        <TextView
                            android:id="@+id/textView_middleName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/middleName"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:layout_gravity="right|center_vertical"/>

                        <EditText
                            android:id="@+id/editText_middleName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="none"
                            android:layout_weight="1" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="10dp">

                        <TextView
                            android:id="@+id/textView_lastName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/lastName"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:layout_gravity="right|center_vertical"/>

                        <EditText
                            android:id="@+id/editText_lastName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="none"
                            android:layout_weight="1" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginBottom="10dp">

                        <TextView
                            android:id="@+id/textView_ContactType"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/contactType"
                            android:textStyle="bold" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="20dp">

                        <Spinner
                            android:id="@+id/spinner_contact_types"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:clickable="false"/>
                    </TableRow>
                </TableLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/organization_linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false">

                <TableLayout
                    android:id="@+id/organization_tableLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                </TableLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/phone_linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false">

                <TableLayout
                    android:id="@+id/phone_tableLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                </TableLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/email_linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false">

                <TableLayout
                    android:id="@+id/email_tableLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                </TableLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/im_linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false">

                <TableLayout
                    android:id="@+id/im_tableLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                </TableLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/address_linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false">

                <TableLayout
                    android:id="@+id/address_tableLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginBottom="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:text="@string/address"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textStyle="bold" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp">

                        <Spinner
                            android:id="@+id/spinner_address_types"
                            android:layout_gravity="right"
                            android:layout_width="75dp"
                            android:dropDownWidth="wrap_content" />

                        <EditText
                            android:id="@+id/editText_address"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="none" />
                    </TableRow>
                </TableLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/notes_linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false">

                <TableLayout
                    android:id="@+id/notes_tableLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                </TableLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/nickname_linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false">

                <TableLayout
                    android:id="@+id/nickname_tableLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                </TableLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/website_linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false">

                <TableLayout
                    android:id="@+id/website_tableLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                </TableLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>